--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,8 @@ jobs:
     # Compile Sandboxie Core
     #
 
-      - name: Build Sandboxie x86 (dll's & svc)
-        run: msbuild /t:build Sandboxie\SandboxDll.sln /p:Configuration="SbieRelease" /p:Platform=Win32 -maxcpucount:8
+      #- name: Build Sandboxie x86 (dll's & svc)
+       # run: msbuild /t:build Sandboxie\SandboxDll.sln /p:Configuration="SbieRelease" /p:Platform=Win32 -maxcpucount:8
 
       - name: Build Sandboxie x64 (all)
         run: msbuild /t:build Sandboxie\Sandbox.sln /p:Configuration="SbieRelease" /p:Platform=x64 -maxcpucount:8
@@ -112,29 +112,29 @@ jobs:
           retention-days: 60
 
 
-  Build_ARM64:
-    runs-on: windows-2019
-    timeout-minutes: 45
+  #Build_ARM64:
+   # runs-on: windows-2019
+  #  timeout-minutes: 45
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+   # steps:
+  #    - name: Checkout code
+    #    uses: actions/checkout@v3
 
-      - name: Setup msbuild
-        uses: microsoft/setup-msbuild@v1.3
+   #   - name: Setup msbuild
+  #      uses: microsoft/setup-msbuild@v1.3
 
     #
     # Compile Sandboxie Core
     #
 
-      - name: Build Sandboxie x86 (dll's & svc)
-        run: msbuild /t:build Sandboxie\SandboxDll.sln /p:Configuration="SbieRelease" /p:Platform=Win32 -maxcpucount:8
+     # - name: Build Sandboxie x86 (dll's & svc)
+     #   run: msbuild /t:build Sandboxie\SandboxDll.sln /p:Configuration="SbieRelease" /p:Platform=Win32 -maxcpucount:8
 
-      - name: Build Sandboxie ARM64 (all)
-        run: msbuild /t:build Sandboxie\Sandbox.sln /p:Configuration="SbieRelease" /p:Platform=ARM64 -maxcpucount:8
+   #   - name: Build Sandboxie ARM64 (all)
+     #   run: msbuild /t:build Sandboxie\Sandbox.sln /p:Configuration="SbieRelease" /p:Platform=ARM64 -maxcpucount:8
 
-      - name: Build Sandboxie ARM64EC (dll)
-        run: msbuild /t:build Sandboxie\SandboxDll.sln /p:Configuration="SbieRelease" /p:Platform=ARM64EC -maxcpucount:8
+    #  - name: Build Sandboxie ARM64EC (dll)
+    #    run: msbuild /t:build Sandboxie\SandboxDll.sln /p:Configuration="SbieRelease" /p:Platform=ARM64EC -maxcpucount:8
 
     #
     # Prepare Qt Framework
